features/sendOtpForm ui developed

--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Vazir";
-  min-height: 100vh;
+  /* min-height: 100vh; */
   user-select: none;
   background-color: rgb(var(--background-app-rgb));
 }
