--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,7 @@
 
 @layer components {
   .textField__input {
-    @apply w-full py-3 px-4 rounded-xl text-secondary-900 border border-secondary-100 bg-secondary-100 hover:border-primary-500 focus:border-primary-500 focus:bg-secondary-0 transition-all duration-300 ease-out focus:shadow-lg focus:shadow-primary-200 dark:focus:shadow-secondary-200;
+    @apply w-80 h-10 rounded-lg bg-gray-100 p-4 text-secondary-600 hover:border-2 hover:border-gray-200 focus:border-2 focus:border-cyan-900 focus:transition-all focus:ease-in hover:transition-all hover:ease-in self-center;
   }
   .btn {
     @apply px-3 py-1 font-bold rounded-xl transition-all duration-300;
@@ -106,6 +106,15 @@
   }
   .badge--danger {
     @apply bg-red-500 text-white;
+  }
+  .verifyButton{
+    @apply  bg-cyan-800 text-white h-10 rounded-lg hover:bg-cyan-700 hover:transition-all hover:ease-in hover:duration-100 transition-all ease-in duration-75
+  }
+  .OTPformWrapper{
+    @apply relative bg-white px-6 pt-10 pb-9 shadow-xl mx-auto w-full max-w-md rounded-2xl mt-44 space-y-3
+  }
+  .OTPform{
+    @apply space-y-5 flex flex-col items-center
   }
 }
 
