--- a/src/index.css
+++ b/src/index.css
@@ -77,9 +77,7 @@
   .textField__input {
     @apply w-80 h-10 rounded-lg bg-gray-100 p-4 text-secondary-600 hover:border-2 hover:border-gray-200 focus:border-2 focus:border-cyan-900 focus:transition-all focus:ease-in hover:transition-all hover:ease-in self-center;
   }
-  .btn {
-    @apply px-3 py-1 font-bold rounded-xl transition-all duration-300;
-  }
+
   .btn--primary {
     @apply px-4 py-3 bg-primary-900 text-white hover:bg-primary-800 shadow-lg shadow-primary-300 dark:shadow-secondary-200;
   }
@@ -146,10 +144,10 @@ button {
   outline: none;
 }
 button:disabled {
-  cursor: default;
+  /* cursor: default;
   background-color: rgb(var(--color-secondary-100), 0.5);
   pointer-events: none;
-  box-shadow: none;
+  box-shadow: none; */
 }
 
 /* inupt number */
