--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url("/fonts.css");
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -109,7 +109,7 @@
     @apply  bg-cyan-800 text-white h-10 rounded-lg hover:bg-cyan-700 hover:transition-all hover:ease-in hover:duration-100 transition-all ease-in duration-75
   }
   .OTPformWrapper{
-    @apply relative bg-white px-6 pt-10 pb-9 shadow-xl mx-auto w-full max-w-md rounded-2xl mt-44 space-y-3
+    @apply relative bg-white px-6 pt-10 pb-9 shadow-xl mx-auto w-full max-w-md rounded-2xl mt-52 space-y-3
   }
   .OTPform{
     @apply space-y-5 flex flex-col items-center 
