--- a/src/index.css
+++ b/src/index.css
@@ -75,11 +75,11 @@
 
 @layer components {
   .textField__input {
-    @apply w-80 h-10 rounded-lg bg-gray-100 p-4 text-secondary-600 hover:border-2 hover:border-gray-200 focus:border-2 focus:border-cyan-900 focus:transition-all focus:ease-in hover:transition-all hover:ease-in self-center;
+    @apply w-80 h-10 rounded-lg bg-gray-100 p-4 text-secondary-600 hover:border-2 hover:border-slate-200 focus:border-2 focus:border-cyan-800 focus:transition-all focus:ease-in hover:transition-all hover:ease-in self-center;
   }
 
   .btn--primary {
-    @apply px-4 py-3 bg-primary-900 text-white hover:bg-primary-800 shadow-lg shadow-primary-300 dark:shadow-secondary-200;
+    @apply px-4 py-3 bg-primary-900 text-white hover:bg-primary-800 shadow-sm shadow-primary-300 dark:shadow-secondary-200;
   }
   .btn--secondary {
     @apply bg-secondary-600 text-secondary-100;
@@ -113,6 +113,15 @@
   }
   .OTPform{
     @apply space-y-5 flex flex-col items-center 
+  }
+  .complete-profile-input{
+    @apply w-full flex  flex-col justify-between text-sm items-center
+  }
+  .complete-profile-input label{
+    @apply mb-3
+  }
+  .radioInput{
+    @apply accent-cyan-800 
   }
 }
 
