--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,9 @@
   .radioInput{
     @apply accent-cyan-800 
   }
+  .header__icon{
+    @apply text-cyan-800 text-xl sm:text-3xl
+  }
 }
 
 html,
