--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,7 @@
 
 @layer components {
   .textField__input {
-    @apply w-80 h-10 rounded-lg bg-gray-100 p-4 text-secondary-600 hover:border-2 hover:border-slate-200 focus:border-2 focus:border-cyan-800 focus:transition-all focus:ease-in hover:transition-all hover:ease-in self-center;
+    @apply w-80 h-10 rounded-lg bg-gray-100 p-4 text-secondary-600 hover:border-2 hover:border-slate-200 focus:shadow-sm focus:shadow-cyan-800 focus:transition-all focus:ease-in hover:transition-all hover:ease-in self-center;
   }
 
   .btn--primary {
@@ -109,13 +109,13 @@
     @apply  bg-cyan-800 text-white h-10 rounded-lg hover:bg-cyan-700 hover:transition-all hover:ease-in hover:duration-100 transition-all ease-in duration-75
   }
   .OTPformWrapper{
-    @apply relative bg-white px-6 pt-10 pb-9 shadow-xl mx-auto w-full max-w-md rounded-2xl mt-52 space-y-3
+    @apply relative bg-white px-6 pt-10 pb-9 shadow-xl mx-auto w-full max-w-2xl rounded-2xl space-y-3 
   }
   .OTPform{
     @apply space-y-5 flex flex-col items-center 
   }
   .complete-profile-input{
-    @apply w-full flex  flex-col justify-between text-sm items-center
+    @apply w-full flex  flex-col justify-between text-sm items-center mb-4
   }
   .complete-profile-input label{
     @apply mb-3
