--- a/src/index.css
+++ b/src/index.css
@@ -132,6 +132,12 @@
   .sidebar-logo_wrapper{
     @apply hover:h-[34px] hover:w-[34px] transition-all ease-in hover:bg-slate-100 flex items-center justify-center
   }
+  .projectTableData{
+    @apply text-cyan-900
+  }
+  .read-desc-icon{
+    @apply text-cyan-600 hover:text-cyan-300 transition-all ease-in text-2xl
+  }
 }
 html,
 body {
