feat:Modal component for delete project and edit project developed,ConfirmDeleteProject component developedd(static)

--- a/src/index.css
+++ b/src/index.css
@@ -133,13 +133,13 @@
     @apply hover:h-[34px] hover:w-[34px] transition-all ease-in hover:bg-slate-100 flex items-center justify-center
   }
   .projectTableData{
-    @apply text-cyan-900
+    @apply text-cyan-900 text-center
   }
   .read-desc-icon{
     @apply text-cyan-600 hover:text-cyan-300 transition-all ease-in text-2xl
   }
   .project-table-wrapper{
-    @apply relative overflow-x-auto shadow-md sm:rounded-lg w-[300px] sm:w-[600px] md:w-[800px] lg:w-[1024px] transition-all max-h-[1024px]
+    @apply relative overflow-x-auto shadow-md sm:rounded-lg w-[417px] sm:w-[600px] md:w-[800px] lg:w-[1024px] transition-all max-h-[1024px]
   }
 }
 html,
