--- a/src/index.css
+++ b/src/index.css
@@ -145,7 +145,7 @@
     @apply backdrop-blur-sm bg-secondary-800 w-full h-screen fixed top-0 left-0 z-50 bg-opacity-30
   }
   .createProjectFormInput{
-    @apply  bg-slate-100 rounded-lg p-3 form-input ring-0 outline-none border-0 focus:ring-cyan-800
+    @apply  bg-slate-100 rounded-lg p-3 form-input ring-0 outline-none border-0 focus:ring-cyan-700
   }
 }
 html,
@@ -189,7 +189,13 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
-
+*::-webkit-scrollbar{
+  display: none;
+}
+*{
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
 input[type="number"] {
   -moz-appearance: textfield; /* Firefox */
 }
