--- a/src/index.css
+++ b/src/index.css
@@ -77,10 +77,10 @@
     @apply w-80 h-10 rounded-lg bg-gray-100 p-4 text-secondary-600 hover:border-2 hover:border-slate-200 focus:shadow-sm focus:border-cyan-800 focus:transition-all focus:ease-in hover:transition-all hover:ease-in self-center dark:bg-slate-700 dark:focus:border-indigo-400 dark:hover:border-indigo-400; 
   }
   .btn--primary {
-    @apply px-4 py-3 bg-primary-900 text-white hover:bg-primary-800 shadow-sm shadow-primary-300 dark:shadow-secondary-200;
+    @apply px-4 py-3 rounded-lg bg-cyan-700 text-white font-bold hover:opacity-80 transition-all ;
   }
   .btn--secondary {
-    @apply bg-secondary-600 text-secondary-100;
+    @apply border-2 border-rose-500 px-4 py-3 rounded-lg text-error font-bold hover:opacity-80 transition-all dark:bg-rose-500 dark:text-white;
   }
   .btn--outline {
     @apply border border-secondary-700 text-secondary-700;
